--- a/Particles/Particles.vcxproj.filters
+++ b/Particles/Particles.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="Particle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ParticelEmitter.h">
+    <ClInclude Include="ParticleEmitter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
