--- a/Particles/Particles.vcxproj
+++ b/Particles/Particles.vcxproj
@@ -122,7 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math.h" />
-    <ClInclude Include="ParticelEmitter.h" />
+    <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="Particle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
