--- a/Particles/Particles.vcxproj.filters
+++ b/Particles/Particles.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="ParticleEmitter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
