--- a/Particles/Particles.vcxproj.filters
+++ b/Particles/Particles.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="ObjPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Factory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="components.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
